cli/tests/snapshots/cli__rejects_invalid_usage.snap
---
source: cli/tests/cli.rs
expression: output
---
exit code: 2
--- stdout
--- stderr
error: standard input (`-`) can only be read once

Usage: magika [OPTIONS] <PATH>...
       magika --list-content-types [--json]

For more information, try '--help'.
exit code: 2
--- stdout
--- stderr
error: the argument '--label' cannot be used with '--mime-type'

Usage: magika [OPTIONS] <PATH>...
       magika --list-content-types [--json]

For more information, try '--help'.
exit code: 2
--- stdout
--- stderr
error: invalid value 'sure' for '--prediction-mode <MODE>'
  [possible values: high-confidence, medium-confidence, best-guess]

For more information, try '--help'.
exit code: 2
--- stdout
--- stderr
error: the argument '--json' cannot be used with '--output-score'

Usage: magika [OPTIONS] <PATH>...
       magika --list-content-types [--json]

For more information, try '--help'.
exit code: 2
--- stdout
--- stderr
error: the argument '--list-content-types' cannot be used with '[PATH]...'

Usage: magika [OPTIONS] <PATH>...
       magika --list-content-types [--json]

For more information, try '--help'.
exit code: 2
--- stdout
--- stderr
error: the argument '--list-content-types' cannot be used with '--label'

Usage: magika [OPTIONS] <PATH>...
       magika --list-content-types [--json]

For more information, try '--help'.
