cli/tests/snapshots/cli__rejects_special_files.snap
---
source: cli/tests/cli.rs
expression: "magika(dir.path(), &[\"/dev/null\"], b\"\")"
---
exit code: 1
--- stdout
/dev/null: error: not a regular file
--- stderr
